# ChangeLog for x11-wm/awesome
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.65 2009/04/16 16:45:15 matsuu Exp $

*awesome-3.2.1-r2 (16 Apr 2009)

  16 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.2.1-r2.ebuild:
  Defined PREFIX and SYSCONFDIR.

*awesome-3.2.1-r1 (12 Apr 2009)

  12 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.2.1-r1.ebuild:
  define SYSCONFDIR, bug #265718.

  11 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.2-r1.ebuild,
  awesome-3.2.1.ebuild:
  Fixed dodoc issue, bug #265632.

*awesome-3.2.1 (05 Apr 2009)

  05 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.2.ebuild,
  +awesome-3.2.1.ebuild:
  Version bumped. Fixed dependency. Removed old version.

*awesome-3.2-r1 (02 Apr 2009)

  02 Apr 2009; MATSUU Takuto <matsuu@gentoo.org>
  +files/awesome-3.2-x11.patch, +awesome-3.2-r1.ebuild:
  Added x11 to AWESOME_REQUIRED, bug #264224.

*awesome-3.2 (13 Mar 2009)

  13 Mar 2009; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.2_rc2.ebuild,
  -awesome-3.2_rc3.ebuild, -awesome-3.2_rc4.ebuild, +awesome-3.2.ebuild:
  Version bumped.

  08 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org>
  awesome-2.3.4.ebuild, awesome-2.3.5.ebuild, awesome-3.0-r1.ebuild:
  Transition to EAPI 2 usedeps

*awesome-3.2_rc4 (27 Feb 2009)

  27 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.2_rc4.ebuild:
  Version bumped.

*awesome-3.2_rc3 (20 Feb 2009)

  20 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.1.1.ebuild,
  -awesome-3.2_rc1.ebuild, +awesome-3.2_rc3.ebuild:
  Version bumped. Removed old versions.

*awesome-3.2_rc2 (13 Feb 2009)

  13 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.2_rc2.ebuild:
  Version bumped.

*awesome-3.2_rc1 (07 Feb 2009)

  07 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.2_rc1.ebuild:
  Version bumped.

*awesome-3.1.2 (05 Feb 2009)
